--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -5,57 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Reset Password - Spam Shield</title>
     <link rel="icon" type="image/webp" href="/headwall-icon.webp" />
-    <link rel="preload" href="/build/bundle.css" as="style" />
     <link rel="stylesheet" href="/build/bundle.css" />
-    <script defer src="/build/bundle.js"></script>
-    <script defer src="/build/reset-password.bundle.js"></script>
   </head>
   <body>
-    <div id="header-placeholder"></div>
-    <main class="container py-4">
-      <h1 class="mb-3">Reset your password</h1>
-      <p class="text-muted">
-        Request a reset link or, if you already have a token, set a new password.
-      </p>
-      <div class="row g-4">
-        <div class="col-md-6">
-          <h2 class="h5">Request reset</h2>
-          <form id="reset-request-form" class="needs-validation" novalidate>
-            <div class="mb-3">
-              <label for="reset-email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="reset-email" name="email" required />
-              <div class="invalid-feedback">Valid email required.</div>
+    <header id="header-placeholder"></header>
+    <main class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-7 col-xl-6">
+          <div class="card">
+            <div class="card-header d-flex align-items-center">
+              <h1 class="h4 my-2">Reset your password</h1>
+              <div
+                id="loadingSpinner"
+                class="ms-auto spinner-border spinner-border-sm text-secondary d-none"
+                role="status"
+              >
+                <span class="visually-hidden">Loading...</span>
+              </div>
             </div>
-            <button type="submit" class="btn btn-outline-primary btn-sm">Send reset email</button>
-          </form>
-          <div id="reset-request-result" class="mt-2"></div>
-        </div>
-        <div class="col-md-6">
-          <h2 class="h5">Consume token</h2>
-          <form id="reset-consume-form" class="needs-validation" novalidate>
-            <div class="mb-3">
-              <label for="reset-token" class="form-label">Reset token</label>
-              <input type="text" class="form-control" id="reset-token" name="token" required />
-              <div class="invalid-feedback">Token required.</div>
+            <div class="card-body">
+              <p class="text-muted small">
+                Request a reset link or, if you already have a token, set a new password.
+              </p>
+              <div class="row g-4">
+                <div class="col-md-6">
+                  <h2 class="h5">Request reset</h2>
+                  <form id="reset-request-form" class="needs-validation" novalidate>
+                    <div class="mb-3">
+                      <label for="reset-email" class="form-label">Email address</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="reset-email"
+                        name="email"
+                        required
+                      />
+                      <div class="invalid-feedback">Valid email required.</div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Send reset email</button>
+                  </form>
+                  <div id="reset-request-result" class="mt-2"></div>
+                </div>
+                <div class="col-md-6">
+                  <h2 class="h5">Set new password</h2>
+                  <form id="reset-consume-form" class="needs-validation" novalidate>
+                    <div class="mb-3">
+                      <label for="reset-token" class="form-label">Reset token</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="reset-token"
+                        name="token"
+                        required
+                      />
+                      <div class="invalid-feedback">Token required.</div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="reset-new-password" class="form-label">New password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="reset-new-password"
+                        name="password"
+                        required
+                        minlength="8"
+                      />
+                      <div class="invalid-feedback">Password required (min 8 chars).</div>
+                    </div>
+                    <button type="submit" class="btn btn-success w-100">Set new password</button>
+                  </form>
+                  <div id="reset-consume-result" class="mt-2"></div>
+                </div>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="reset-new-password" class="form-label">New password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="reset-new-password"
-                name="password"
-                required
-                minlength="8"
-              />
-              <div class="invalid-feedback">Password required (min 8 chars).</div>
-            </div>
-            <button type="submit" class="btn btn-success btn-sm">Set new password</button>
-          </form>
-          <div id="reset-consume-result" class="mt-2"></div>
+          </div>
+          <p class="mt-4 small text-muted">
+            Remembered your password? <a href="/login.html">Sign in</a>.
+          </p>
         </div>
       </div>
     </main>
-    <div id="footer-placeholder" class="mt-5"></div>
+    <footer id="footer-placeholder"></footer>
+    <script src="/build/bundle.js"></script>
+    <script src="/build/reset-password.bundle.js"></script>
   </body>
 </html>
