--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -8,32 +8,116 @@
     <link rel="stylesheet" href="/build/bundle.css" />
   </head>
   <body>
+    <!-- Toast container for notifications -->
+    <div class="toast-container position-fixed top-0 end-0 p-3"></div>
+
     <header id="header-placeholder"></header>
     <main class="container py-4">
       <div class="d-flex align-items-center mb-3">
         <h1 class="h4 m-0">Users</h1>
-        <button id="refreshUsersBtn" class="btn btn-outline-secondary btn-sm ms-auto">
-          Refresh
+        <div
+          id="loadingSpinner"
+          class="ms-2 spinner-border spinner-border-sm text-secondary d-none"
+          role="status"
+        >
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <button
+          class="btn btn-primary btn-sm ms-auto"
+          data-bs-toggle="modal"
+          data-bs-target="#userModal"
+        >
+          Create User
         </button>
       </div>
+
+      <!-- Search Form -->
+      <form id="searchForm" class="mb-3">
+        <div class="input-group">
+          <input
+            type="text"
+            id="emailSearchInput"
+            class="form-control"
+            placeholder="Search by email..."
+          />
+          <button class="btn btn-outline-secondary" type="submit">Search</button>
+        </div>
+      </form>
+
       <div id="usersList" class="table-responsive small">
         <table class="table table-striped align-middle">
           <thead>
             <tr>
-              <th>ID</th>
               <th>Email</th>
               <th>Roles</th>
               <th>Status</th>
+              <th class="text-end">Actions</th>
             </tr>
           </thead>
           <tbody id="usersTableBody">
             <tr>
-              <td colspan="4" class="text-muted">No data yet</td>
+              <td colspan="4" class="text-muted">Loading...</td>
             </tr>
           </tbody>
         </table>
       </div>
+
+      <!-- Pagination -->
+      <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center" id="pagination"></ul>
+      </nav>
     </main>
+
+    <!-- User Modal -->
+    <div
+      class="modal fade"
+      id="userModal"
+      tabindex="-1"
+      aria-labelledby="userModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="userModalLabel">Create User</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="userForm">
+              <input type="hidden" id="userIdInput" name="id" />
+              <div class="mb-3">
+                <label for="emailInput" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="emailInput" name="email" required />
+              </div>
+              <div class="mb-3">
+                <label for="statusInput" class="form-label">Status</label>
+                <select class="form-select" id="statusInput" name="status">
+                  <!-- Statuses will be populated by JS -->
+                </select>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Roles</label>
+                <div id="rolesCheckboxes">
+                  <!-- Roles will be populated by JS -->
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  Close
+                </button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer id="footer-placeholder"></footer>
     <script src="/build/bundle.js"></script>
     <script src="/build/admin-users.bundle.js"></script>
