--- a/public/login.html
+++ b/public/login.html
@@ -9,37 +9,57 @@
   </head>
   <body>
     <header id="header-placeholder"></header>
-    <main class="container py-5" style="max-width: 480px">
-      <h1 class="h4 mb-4">Sign in</h1>
-      <form id="loginForm" class="vstack gap-3">
-        <div>
-          <label class="form-label" for="email">Email</label>
-          <input
-            class="form-control"
-            type="email"
-            id="email"
-            name="email"
-            required
-            autocomplete="username"
-          />
+    <main class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5 col-xl-4">
+          <div class="card">
+            <div class="card-header d-flex align-items-center">
+              <h1 class="h4 my-2">Sign in</h1>
+              <div
+                id="loadingSpinner"
+                class="ms-auto spinner-border spinner-border-sm text-secondary d-none"
+                role="status"
+              >
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+            <div class="card-body">
+              <form id="loginForm" class="vstack gap-3">
+                <div>
+                  <label class="form-label" for="email">Email</label>
+                  <input
+                    class="form-control"
+                    type="email"
+                    id="email"
+                    name="email"
+                    required
+                    autocomplete="username"
+                  />
+                </div>
+                <div>
+                  <label class="form-label" for="password">Password</label>
+                  <input
+                    class="form-control"
+                    type="password"
+                    id="password"
+                    name="password"
+                    required
+                    autocomplete="current-password"
+                  />
+                </div>
+                <button class="btn btn-primary w-100" type="submit">Login</button>
+                <div id="loginError" class="alert alert-danger py-2 px-3 small d-none"></div>
+              </form>
+            </div>
+          </div>
+          <p class="small mt-4 mb-2 text-muted">
+            Lost your password? <a href="/reset-password.html">Request a password reset</a>
+          </p>
+          <p class="small text-muted">
+            Need an account? <a href="/register.html">Register here</a>
+          </p>
         </div>
-        <div>
-          <label class="form-label" for="password">Password</label>
-          <input
-            class="form-control"
-            type="password"
-            id="password"
-            name="password"
-            required
-            autocomplete="current-password"
-          />
-        </div>
-        <button class="btn btn-primary w-100" type="submit">Login</button>
-        <div id="loginError" class="alert alert-danger py-2 px-3 small d-none"></div>
-      </form>
-      <p class="mt-4 small text-muted">
-        Need an account? Registration endpoint is still API-based.
-      </p>
+      </div>
     </main>
     <footer id="footer-placeholder"></footer>
     <script src="/build/bundle.js"></script>
